syntax = "proto3";

option java_package = "tornaco.apps.shortx.core.proto.condition";
option java_outer_classname = "OuterConditions";
option java_multiple_files = true;

import "shortx/Common.proto";
import "google/protobuf/any.proto";
import "plugin/wrapper.proto";

enum ConditionOperator {
  ALL = 0;
  ANY = 1;
  NONE = 2;
  MVEL = 3;
}

message ConditionOperatorPayload {
  string expression = 1;
}

message True {
  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message False {
  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message CurrentPkgList {
  repeated AppPkg pkgs = 1;
  repeated string pkgSets = 2;
  // Default is ALL.
  ConditionOperator op = 3;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message CurrentPkgListByPkg {
  repeated StringPair pkgAndUsers = 1;
  // Default is ALL.
  ConditionOperator op = 2;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}


message CurrentActivity {
  repeated AppComponent activities = 1;
  ConditionOperator op = 2;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message MatchMVEL {
  string expression = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message MatchJS {
  string expression = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message BatteryPercent {
  int32 value = 1;
  IntOp op = 2;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message ConnectedWifiSignal {
  int32 level = 1;
  IntOp op = 2;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message AppIsRunning {
  repeated AppPkg pkgs = 1;
  repeated string pkgSets = 2;
  // Default is ALL.
  ConditionOperator op = 3;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message AppIsNotRunning {
  repeated AppPkg pkgs = 1;
  repeated string pkgSets = 2;
  // Default is ALL.
  ConditionOperator op = 3;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}


message AppHasAudioFocus {
  repeated AppPkg pkgs = 1;
  repeated string pkgSets = 2;
  // Default is ALL.
  ConditionOperator op = 3;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message AppHasWindowFocus {
  repeated AppPkg pkgs = 1;
  repeated string pkgSets = 2;
  // Default is ALL.
  ConditionOperator op = 3;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}


message EvaluateLocalVar {
  GlobalVarOp op = 1;
  string varName = 2;
  GlobalVarOpPayload payload = 3;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message EvaluateGlobalVar {
  GlobalVarOp op = 1;
  string varName = 2;
  GlobalVarOpPayload payload = 3;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message EvaluateContextVar {
  GlobalVarOp op = 1;
  string varName = 2;
  GlobalVarOpPayload payload = 3;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

enum GlobalVarOp {
  GreaterThan = 0;
  GreaterThanOrEQ = 1;
  LessThan = 2;
  LessThanOrEQ = 3;
  EqualTo = 4;
  Contains = 5;
  DoesNotContain = 6;
  NotSet = 7;
  HasBeenSet = 8;
  IsEmpty = 9;
  IsNotEmpty = 10;
  IsExists = 11;
  IsNotExists = 12;
}

message GlobalVarOpPayload {
  string value = 1;
}

message ServiceIsRunning {
  repeated AppComponent services = 1;

  // Default is ALL.
  ConditionOperator op = 3;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message ProcessIsRunning {
  repeated ProcessName processList = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message ScreenIsOn {
  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message VPNIsConnected {
  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message TimeInRange {
  TimeOfADayRange range = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message ChargeState {
  bool requireIsCharge = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message PlugState {
  bool requireIsPlug = 1;
  PlugType type = 2;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

enum PlugType {
  PlugType_PlugAny = 0;
  PlugType_PlugUSB = 1;
  PlugType_PlugAC = 2;
  PlugType_PlugWireless = 3;
  PlugType_NotPlug = 4;
  PlugType_IsCharge = 5;
}

message RequireWifiConnected {
  string requiredSSID = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message RequireWifiDisconnected {
  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message RequireBTConnected {
  string device = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message RequireBTDisconnected {
  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message RequireBTDeviceFound {
  string device = 1;
  string address = 2;
  string timeout = 3;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message RequireMobileDataEnabled {
  int32 slotId = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message AppHasNotification {
  repeated AppPkg pkgs = 1;
  repeated string pkgSets = 2;
  // Default is ALL.
  ConditionOperator op = 3;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message KeyguardIsLocked {
  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message ScreenOrientationIsPort {
  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message IsInCall {
  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message IsRinging {
  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message HasNodeOnScreen {
  string packageName = 1;
  string componentName = 2;
  repeated google.protobuf.Any matchers = 3;
  int64 detectTimeout = 4;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message IsRuleEnabled {
  bool isEnabled = 1;
  string ruleId = 2;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message IsHeadsetPlug {
  bool isPlug = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message RequireScreenRotate {
  ScreenRotateDegree degree = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}


message RequireWindowRotation {
  ScreenRotateDegree degree = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message RequireDelay {
  string timeString = 1;
  bool useAlarm = 2;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message RequireSensorOff {
  bool isRequireOn = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message RequireTileState {
  QSTileState state = 1;
  string tileSpec = 2;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}


message RequireFactTag {
  string tag = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message AppHasTask {
  repeated AppPkg pkgs = 1;
  repeated string pkgSets = 2;
  // Default is ALL.
  ConditionOperator op = 3;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

message RequireAPMMode {
  bool isAPMEnable = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}


message RequireIMEVisibility {
  bool isShown = 1;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}


// The first/second/3/... time
message TheXXTimeToday {
  string what = 1;
  int32 time = 2;
  IntOp op = 3;
  TheXXTimeTodayScope scope = 4;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}

enum TheXXTimeTodayScope {
  Today = 0;
  TodayAM = 1;
  TodayPM = 2;
  ThisWeek = 3;
  ThisMonth = 4;
}

message PluginCondition {
  string pluginId = 1;
  ParamsDataWrapper params = 2;

  CustomContextDataKey customContextDataKey = 97;
  bool isDisabled = 96;
  bool isInvert = 98;
  string note = 99;
  string id = 100;
}